third_party/move/tools/move-asm/tests/assembler/unknown_field.exp
processed 1 task

task 0 'publish'. lines 1-11:
Error: error: undeclared field `bad`
  ┌─ test:7:5
  │
7 │     borrow_field S, bad
  │     ^^^^^^^^^^^^^^^^^^^


